Updating intro paragraphs

--- a/MCarlo.ipynb
+++ b/MCarlo.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Monte Carlo Portfolio Simulation\n",
-    "### Let's see what daily investing MIGHT do for your portfolio...\n",
     "### The inspiration for doing this project sprouted from a savings habbit that my girlfriend and I adopted, mentioned in the book, Atomic Habbits by James Clear. Every day, instead of choosing to buy lunch, we put the amount of money that we WOULD have spent on lunch into a brokerage account and invest in a broad market index mutual fund. I wanted to show my girlfriend all the possible outcomes. (We cook lunches for the week on Sundays and bring them from home, instead of buying food from cafeteria, fast food, etc.)\n",
-    "#### Monte Carlo is a famous simulation method where many different simulations are run and the results examines. We will first examine the returns of the S&P 500 to determine the distribution of daily return percentages. ONce we have this distribution, we will build a Monte Carlo simulator that applies a random daily return (with a random distribution that closely matches the distribution of S&P 500 returns) and add a new investment each day.\n"
+    "### Let's see what daily investing MIGHT do for your portfolio...\n",
+    "#### Brief Background: Monte Carlo is a famous simulation method where many different simulations are run and the results examines. We will first examine the returns of the S&P 500 to determine the distribution of daily return percentages. ONce we have this distribution, we will build a Monte Carlo simulator that applies a random daily return (with a random distribution that closely matches the distribution of S&P 500 returns) and add a new investment each day.\n"
    ]
   },
   {
