--- a/MCarlo.ipynb
+++ b/MCarlo.ipynb
@@ -7,7 +7,7 @@
     "# Monte Carlo Portfolio Simulation\n",
     "### The inspiration for doing this project sprouted from a savings habbit that my girlfriend and I adopted, mentioned in the book, Atomic Habbits by James Clear. Every day, instead of choosing to buy lunch, we put the amount of money that we WOULD have spent on lunch into a brokerage account and invest in a broad market index mutual fund. I wanted to show my girlfriend all the possible outcomes. (We cook lunches for the week on Sundays and bring them from home, instead of buying food from cafeteria, fast food, etc.)\n",
     "### Let's see what daily investing MIGHT do for your portfolio...\n",
-    "#### Brief Background: Monte Carlo is a famous simulation method where many different simulations are run and the results examines. We will first examine the returns of the S&P 500 to determine the distribution of daily return percentages. ONce we have this distribution, we will build a Monte Carlo simulator that applies a random daily return (with a random distribution that closely matches the distribution of S&P 500 returns) and add a new investment each day.\n"
+    "#### Brief Background/Overview: Monte Carlo Simulation (named after the Monte Carlo Casino in Mexico) is a way of generating random outcomes over and over. Think about rolling a dice or flipping a coin millions of times to try to determine the probability of an outcome. Using python to code a Monte Carlo simulation will be much more efficient than actually flipping a coin and recording each result. We will take this idea and apply it to the Markets. In the Monte Carlo simulator built through this project, we are simulating trading days (instead of dice rolls) and recording the portfolio values after each day (We are assuming random returns each day). We will first examine the returns of the S&P 500 to determine the distribution of daily return percentages. Once we have this distribution, we will build a Monte Carlo simulator that applies a random daily return (with a random distribution that closely matches the distribution of S&P 500 returns) and add a new investment each day.\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now that we have all the packages we need imported lets take a closer look at the S&P 500 dataset and create a DataFrame with just the adjusted clos data"
+    "### Now that we have all the packages we need imported lets take a closer look at the S&P 500 dataset and create a DataFrame with just the adjusted close data"
    ]
   },
   {
@@ -409,7 +409,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO Automate file dowload instead of having user save to downloads folder\n"
+   ]
   },
   {
    "cell_type": "code",
